# GovAI

./: .env.example  .gitignore  ENVIRONMENTS.md  README.md  docker-compose.yml
agents/: base_agent.py  credit_scoring.py  customer_service.py  recruitment.py  requirements.txt
api/: Dockerfile  config.py  database.py  main.py  requirements.txt
api/dependencies/: auth.py
api/repositories/: agents_repository.py  audit_repository.py  auth_repository.py  compliance_repository.py  dashboard_repository.py  demo_repository.py  oversight_repository.py  policies_repository.py  providers_repository.py  settings_repository.py
api/routers/: agents.py  audit.py  auth.py  compliance.py  dashboard.py  demo.py  oversight.py  policies.py  providers.py  reports.py  settings.py
api/services/: ai_act_classifier.py  auth_service.py  compliance.py  enterprise_report.py  report_generator.py  settings_service.py
branding/: brand-guide.html  build_raster.py
db/: init.sql  migrate_v2.sql  migrate_v3.sql
db/migrations/: 001_ai_act_requirements.sql  002_auth.sql  (+8 more)
docs/: framework-integration.md
frontend/: middleware.ts  next.config.js  package.json  tailwind.config.js
gateway/: Dockerfile  app_settings.py  audit_logger.py  auth_middleware.py  config.py  database.py  main.py  models.py  oversight.py  pii_scanner.py  policy_engine.py  proxy.py  requirements.txt
ollama/: pull-bielik.sh
presentations/: DEMO_SCENARIUSZ.md  build_demo_backup.py  build_presentation.py
sdk/: pyproject.toml
sdk/govai_sdk/: __init__.py  client.py  langchain.py  langgraph.py  semantic_kernel.py
(+29 files in other folders)
