[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "govai-sdk"
version = "0.1.0"
description = "GovAI SDK — integracja LangChain / LangGraph / Semantic Kernel z bramką GovAI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]
langgraph = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
]
semantic-kernel = [
    "semantic-kernel>=1.14",
]
all = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "semantic-kernel>=1.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["govai_sdk*"]
